[package]
name = "hash_table_datastruct"
version = "0.1.0"
edition = "2021"

description = "Adds a HashTable type, allowing to store values in a table with integer-indexed rows and hashable keys for columns"
license = "MIT"
documentation = "https://docs.rs/hash_table_datastruct/latest"
repository = "https://github.com/JohnTheCoolingFan/hash_table"

[dependencies]
cfg-if = "1.0.0"
hashbrown = { version = "0.14.1", optional = true }
